--- a/mylittlemonster/Base.lproj/Main.storyboard
+++ b/mylittlemonster/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="mylittlemonster" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,103 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="sNV-ar-MHx">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ground" translatesAutoresizingMaskIntoConstraints="NO" id="TQu-in-QX4">
+                                <rect key="frame" x="0.0" y="516" width="600" height="84"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="84" id="cao-rE-jOC"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="livespanel" translatesAutoresizingMaskIntoConstraints="NO" id="EMn-Ro-Rxa">
+                                <rect key="frame" x="180" y="20" width="240" height="78"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="78" id="T7B-RU-IWU"/>
+                                    <constraint firstAttribute="width" constant="240" id="tuW-04-qg6"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="mEV-jz-Ldq">
+                                <rect key="frame" x="205" y="39" width="180" height="50"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skull" translatesAutoresizingMaskIntoConstraints="NO" id="Ei4-I0-tt3">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="JmH-Yf-epd"/>
+                                            <constraint firstAttribute="width" constant="50" id="KVy-6x-6GK"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skull" translatesAutoresizingMaskIntoConstraints="NO" id="noF-4T-p0X">
+                                        <rect key="frame" x="65" y="0.0" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Ivk-5N-dlM"/>
+                                            <constraint firstAttribute="width" constant="50" id="s3s-oO-FiS"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skull" translatesAutoresizingMaskIntoConstraints="NO" id="dy8-kB-hPL">
+                                        <rect key="frame" x="130" y="0.0" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="7mc-Ok-0UB"/>
+                                            <constraint firstAttribute="width" constant="50" id="lWT-g7-DCW"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="jEs-2x-3rY">
+                                <rect key="frame" x="155" y="121" width="290" height="98"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" translatesAutoresizingMaskIntoConstraints="NO" id="7Hs-13-EpH">
+                                        <rect key="frame" x="0.0" y="0.0" width="95" height="98"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="food" translatesAutoresizingMaskIntoConstraints="NO" id="ycS-iR-57X">
+                                        <rect key="frame" x="195" y="0.0" width="95" height="98"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="idle 1" translatesAutoresizingMaskIntoConstraints="NO" id="yp6-Bh-Qi0">
+                                <rect key="frame" x="0.0" y="220" width="455" height="311"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="311" id="0ni-zy-DCT"/>
+                                    <constraint firstAttribute="width" constant="455" id="hRh-Jb-QQi"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="mEV-jz-Ldq" firstAttribute="centerY" secondItem="EMn-Ro-Rxa" secondAttribute="centerY" id="IyK-jN-ORW"/>
+                            <constraint firstItem="sNV-ar-MHx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Kai-4P-pE4"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="sNV-ar-MHx" secondAttribute="bottom" id="S8F-CR-Fcy"/>
+                            <constraint firstAttribute="trailing" secondItem="sNV-ar-MHx" secondAttribute="trailing" id="Ssw-cd-2gC"/>
+                            <constraint firstItem="EMn-Ro-Rxa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="UjP-LV-TNY"/>
+                            <constraint firstItem="TQu-in-QX4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="W0W-13-lCi"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="yp6-Bh-Qi0" secondAttribute="bottom" constant="69" id="ZDZ-Xk-O21"/>
+                            <constraint firstItem="sNV-ar-MHx" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="b2Y-aQ-wlM"/>
+                            <constraint firstItem="EMn-Ro-Rxa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eVn-aH-bb7"/>
+                            <constraint firstItem="jEs-2x-3rY" firstAttribute="top" secondItem="EMn-Ro-Rxa" secondAttribute="bottom" constant="23" id="gyu-zb-157"/>
+                            <constraint firstItem="jEs-2x-3rY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mlc-8r-VoO"/>
+                            <constraint firstItem="mEV-jz-Ldq" firstAttribute="centerX" secondItem="EMn-Ro-Rxa" secondAttribute="centerX" id="rXe-xh-VHt"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="TQu-in-QX4" secondAttribute="bottom" id="vaL-aA-NpV"/>
+                            <constraint firstAttribute="trailing" secondItem="TQu-in-QX4" secondAttribute="trailing" id="wtV-Si-Z8J"/>
+                            <constraint firstItem="yp6-Bh-Qi0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="ycv-RE-2jx"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="monsterImg" destination="yp6-Bh-Qi0" id="a81-Ab-CLF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="377" y="476"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bg" width="768" height="1024"/>
+        <image name="food" width="95" height="98"/>
+        <image name="ground" width="1444" height="151"/>
+        <image name="heart" width="95" height="98"/>
+        <image name="idle 1" width="889" height="615"/>
+        <image name="livespanel" width="468" height="137"/>
+        <image name="skull" width="95" height="98"/>
+    </resources>
 </document>
